#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.61])

AC_INIT([captagent], [trunk], [https://www.sipcapture.org])

AC_CONFIG_SRCDIR([src/captagent.c])

#AC_CONFIG_AUX_DIR(`pwd`)
captagent_builddir=`pwd`

AC_COPYRIGHT("SIP Capture Solution")

AC_CONFIG_HEADERS([config.h])

CONFIG_CFLAGS="${CFLAGS}"
CONFIG_LDFLAGS="${LDFLAGS}"

AC_PROG_LIBTOOL

MODULES='$$(grep -v "\#" $(captagent_builddir)/modules.list | sed -e "s|^.*/||" | sort | uniq )'
AM_MAKEFLAGS='"OUR_MODULES=$(MODULESS)" `test -n "$(VERBOSE)" || echo -s`'
AC_SUBST(OUR_MODS)

AC_ENABLE_SHARED(yes)
AC_ENABLE_STATIC(no)

AM_INIT_AUTOMAKE

# Checks for programs.
AC_PROG_CC([gcc cc])

AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET
AC_PROG_RANLIB

# Checks for libraries.
AC_CHECK_LIB(pthread, pthread_create, , [AC_MSG_ERROR([captagent requires but cannot find pthread])])
AC_CHECK_LIB(dl, dlopen, , [AC_MSG_ERROR([captagent requires but cannot find libdl])])
AC_CHECK_LIB(expat, XML_ParserCreate, , [AC_MSG_ERROR([captagent requires but cannot find libexpat])])
AC_CHECK_LIB(pcap, pcap_open_live, ,[AC_CHECK_LIB(wpcap, pcap_open_live, ,[AC_MSG_ERROR([captagent requires but cannot find libpcap])])])
AC_CHECK_LIB(z, inflate, , [AC_MSG_ERROR([captagent requires but cannot find lz])])

# Checks for header files.
AC_CHECK_HEADERS([pcap.h],,[AC_MSG_ERROR([captagent cannot find pcap.h])])
AC_CHECK_HEADERS([zlib.h],,[AC_MSG_ERROR([captagent cannot find zlib.h])])
AC_CHECK_HEADERS([arpa/inet.h fcntl.h netdb.h stdlib.h string.h sys/socket.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_INT32_T
AC_TYPE_INT8_T
AC_TYPE_PID_T
AC_TYPE_UINT16_T
AC_TYPE_UINT32_T
AC_TYPE_UINT8_T

# Checks for library functions.
AC_FUNC_FORK
AC_FUNC_MALLOC
AC_CHECK_FUNCS([gettimeofday memset select socket strdup strerror strndup])


#AC_CONFIG_FILES([Makefile src/Makefile mod/Makefile])

AC_OUTPUT(Makefile src/Makefile mod/core_hep/Makefile mod/proto_uni/Makefile)

