include $(top_srcdir)/common.am

noinst_HEADERS =  \
	captagent/action.h \
	captagent/api.h \
	captagent/capture.h \
	captagent/export_function.h \
	captagent/globals.h \
	captagent/log.h \
	captagent/md5.h \
	captagent/modules_api.h \
	captagent/modules.h \
	captagent/proto_sip.h \
	captagent/structure.h \
	captagent/xmlread.h
